# cxx-cmake

01/: CMakeLists.txt
01_2/: CMakeLists.txt
01_2/src/: CMakeLists.txt
01_2/src/sub_src/: CMakeLists.txt
02/: script.cmake  script2.cmake  script3.cmake
02_2/: CMakeLists.txt
02_2/sub/: CMakeLists.txt
02_3/: command.cmake  control.cmake  list.cmake  loop.cmake
02_4/: a.cmake  b.cmake  c.cmake
03/: CMakeLists.txt  config.h.in
03/install/include/h/: h.hpp
03/install/lib64/cmake/Arthur/: d-config.cmake  d-debug.cmake  d.cmake  h-config.cmake  h.cmake  s-config.cmake  s-debug.cmake  s.cmake
03/libs/aother-project/: CMakeLists.txt
03/libs/aother-project/src/: main.cc
03/libs/d/: CMakeLists.txt
03/libs/d/cmake/: config.cmake.in
03/libs/d/include/d/: d.hpp
03/libs/d/src/: CMakeLists.txt  d.cpp
03/libs/h/: CMakeLists.txt
03/libs/h/cmake/: config.cmake.in
03/libs/s/: CMakeLists.txt
03/libs/s/cmake/: config.cmake.in
03/libs/s/include/s/: s.hpp
03/libs/s/src/: CMakeLists.txt  s.cpp
03/src/: CMakeLists.txt  main.cpp  print.cpp
